virt-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: virtapp
  name: virtapp
spec:
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: virtapp
  type: NodePort
status:
  loadBalancer: {}
